Update de Views e Interface Visual

--- a/src/views/help.html
+++ b/src/views/help.html
@@ -1,11 +1,18 @@
 <b>Modo de usar...</b>
+Para registrar uma compra basta digitar o valor dela e enviar.
+Em seguida aparecerá uma menu de seleção para você dizer a categoria da compra. 
+Após clicar, basta esperar a confirmação do registro e teremos o dados na planilha 😃
+
+Exemplo de mensagem...
 <code>
-    valor
-    local
-    detalhes
+12,00
 </code>
 
-Ou então voce pode usar...
-<code> valor local </code>
+Você pode fornecer mais detalhes, separando por linhas da seguinte maneira...
+<code>
+valor
+local
+detalhes
+</code>
 
-Nesse caso ele so ira considerar o local
+Nesse caso ele registrará o dado com o local da compra e algum detalhe que vc deseje acrescentar
